--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -68,11 +68,7 @@ jobs:
             }
 
             console.log('Creating a new pull request')
-            const body = `
-            This is an automated pull request to sync changes between the public and private repos.
-            Our bot will merge this pull request automatically.
-            To preserve continuity across repos, _do not squash_ this pull request.
-            `
+            const body = 'This is an automated pull request to sync changes between the public and private repos. Our bot will merge this pull request automatically. To preserve continuity across repos, do not manually merge the pull request.'
             let pull, pull_number
             try {
               const response = await github.rest.pulls.create({
