--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           source_repo: ${{ secrets.SOURCE_REPO }}
           source_branch: main
-          destination_branch: ${{ secrets.INTERMEDIATE_BRANCH }}
+          destination_branch: repo-sync
           github_token: ${{ secrets.WORKFLOW_TOKEN }}
       - name: Ship pull request
         uses: actions/github-script@e69ef5462fd455e02edcaf4dd7708eda96b9eda0
@@ -25,7 +25,7 @@ jobs:
           result-encoding: string
           script: |
             const { owner, repo } = context.repo
-            const head = 'github:repo-sync'
+            const head = 'repo-sync'
             const base = 'main'
 
             async function closePullRequest(prNumber) {
@@ -64,7 +64,8 @@ jobs:
                 return
               }
             } catch (err) {
-              console.error(`Unable to compute the files difference between ${head} and ${base}`, err.message)
+              console.error(`Unable to compute the files difference between ${head} and ${base}: `, err.message)
+              throw err
             }
 
             console.log('Creating a new pull request')
