--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -18,6 +18,7 @@ jobs:
           source_branch: main
           destination_branch: repo-sync
           github_token: ${{ secrets.WORKFLOW_TOKEN }}
+          sync_tags: "true"
       - name: Ship pull request
         uses: actions/github-script@v7
         with:
