Update awesome-workflow.yml to print cool message

--- a/.github/workflows/awesome-workflow.yml
+++ b/.github/workflows/awesome-workflow.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - run: |
           echo "Awesome!!!!!!!"
+          echo "Super Cool!"
           echo "This is $(arch)"
           pwd
           ls
