--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -1,9 +1,10 @@
+
 name: Repo Sync
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * *" # once every day
+    - cron: "*/30 * * * *" # once every 30 minutes
 
 jobs:
   repo-sync:
@@ -39,16 +40,6 @@ jobs:
               })
               // Error loud here, so no try/catch
               console.log('Closed pull request', prNumber)
-            }
-
-            console.log('Closing any existing pull requests')
-            const { data: existingPulls } = await github.rest.pulls.list({ owner, repo, head, base })
-            if (existingPulls.length) {
-              console.log('Found existing pull requests', existingPulls.map(pull => pull.number))
-              for (const pull of existingPulls) {
-                await closePullRequest(pull.number)
-              }
-              console.log('Closed existing pull requests')
             }
 
             try {
